# iai-final-project

./: 1_collect_data.py  2_train.py  2d.py  README.md  generate_data_from_video_clips.ipynb  integrated_game.py  main.py  neutral_mean.npy  play.py  pose_classifier_project.md  pose_model.pkl  pyproject.toml  req.txt  requirements.txt  subway_controller.py  train_pose_model.ipynb
