[project]
name = "final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "joblib>=1.5.3",
    "mediapipe>=0.10.35",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.2",
    "playwright>=1.59.0",
    "pyautogui>=0.9.54",
    "pygame>=2.6.1",
    "pynput>=1.8.1",
    "scikit-learn>=1.8.0",
    "selenium>=4.43.0",
]
